--- a/packages/fresh/pubspec.yaml
+++ b/packages/fresh/pubspec.yaml
@@ -7,8 +7,9 @@ homepage: https://github.com/felangel/fresh
 version: 0.4.1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dev_dependencies:
   mocktail: ^0.3.0
-  test: ^1.16.0
+  test: ^1.19.2
+  very_good_analysis: ^5.0.0+1
