--- a/packages/fresh_dio/example/packages/jsonplaceholder_client/pubspec.yaml
+++ b/packages/fresh_dio/example/packages/jsonplaceholder_client/pubspec.yaml
@@ -1,18 +1,17 @@
 name: jsonplaceholder_client
 description: A jsonplaceholder client for Dart.
-version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  dio: ^5.0.0
+  dio: ^5.2.1+1
   fresh_dio:
     path: ../../../
-  json_annotation: ^4.0.0
+  json_annotation: ^4.8.1
 
 dev_dependencies:
-  build_runner: ^1.11.5
-  json_serializable: ^4.0.0
-  very_good_analysis: ^2.4.0
+  build_runner: ^2.4.5
+  json_serializable: ^6.7.0
+  very_good_analysis: ^5.0.0+1
