--- a/packages/fresh_dio/example/packages/user_repository/pubspec.yaml
+++ b/packages/fresh_dio/example/packages/user_repository/pubspec.yaml
@@ -1,12 +1,11 @@
 name: user_repository
 description: A User Dart Repository
-version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   jsonplaceholder_client:
     path: ../jsonplaceholder_client
-  very_good_analysis: ^2.4.0
+  very_good_analysis: ^5.0.0+1
