--- a/packages/fresh_dio/example/pubspec.yaml
+++ b/packages/fresh_dio/example/pubspec.yaml
@@ -4,13 +4,14 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  equatable: ^2.0.0
+  bloc: ^8.1.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.0
+  flutter_bloc: ^8.1.3
   jsonplaceholder_client:
     path: packages/jsonplaceholder_client
   photos_repository:
@@ -21,7 +22,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^2.4.0
+  very_good_analysis: ^5.0.0+1
 
 flutter:
   uses-material-design: true
