--- a/packages/fresh_dio/pubspec.yaml
+++ b/packages/fresh_dio/pubspec.yaml
@@ -7,13 +7,13 @@ homepage: https://github.com/felangel/fresh
 version: 0.4.0
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  dio: ^5.0.0
-  fresh: ^0.4.0
+  dio: ^5.2.1+1
+  fresh: ^0.4.1
 
 dev_dependencies:
   mocktail: ^0.3.0
-  test: ^1.16.0
-  very_good_analysis: ^2.4.0
+  test: ^1.19.2
+  very_good_analysis: ^5.0.0+1
